--- a/unityplugins-site/index.html
+++ b/unityplugins-site/index.html
@@ -22,7 +22,7 @@
   <script src="js/flickity.pkgd.min.js" defer></script>
   <script src="./fetchdata/fetch.js"></script>
   <script>
-    getList();
+    // getList();
     // testDBConnect();
   </script>
 </head>
@@ -101,7 +101,7 @@
               <div class="uk-inline uk-slider-items uk-transition-toggle">
                 <img src="./images/plu2.jpg" alt="">
                 <div class="uk-overlay uk-overlay-primary uk-remove-padding uk-position-bottom uk-transition-fade">
-                  <a href="#plugin1" uk-toggle>
+                  <a href="#plugin" uk-toggle>
                     <div class=" uk-overlay-primary uk-transition-fade  uk-width-1-1 uk-position-top uk-text-center  ">
                       Quick View
                     </div>
@@ -260,6 +260,7 @@
 
       $('#all').on('click', function() {
         // UIkit.toggle('.swiper-slide').toggle();
+        $('.swiper-slide').hide();
         $('.swiper-slide').show();
         swiper.update();
       });
@@ -299,50 +300,59 @@
     <button class="uk-modal-close-default" type="button" uk-close></button>
     <div class="uk-grid-collapse uk-child-width-1-1@s uk-flex-middle" uk-grid>
       <h1 class="uk-text-center .uk-text-small" style="font-size: 1.5rem !important;">WRP IOS Video Player</h1>
-      <div class="" name="col1" style="">
-        <div class="uk-padding-large uk-padding-remove-bottom" uk-slideshow uk-grid>
-          <div class="uk-width-auto@m">
-            <ul class="uk-thumbnav uk-thumbnav-vertical" uk-margin>
-              <li uk-slideshow-item="0"><a href="#"><img src="./images/plu1.jpg" width="60" alt=""></a></li>
-              <li uk-slideshow-item="1"><a href="#"><img src="./images/plu2.jpg" width="60" alt=""></a></li>
-              <li uk-slideshow-item="2"><a href="#"><img src="./images/plu3.jpg" width="60" alt=""></a></li>
-              <li uk-slideshow-item="3"><a href="#"><img src="./images/youtube.jpg" width="60" alt=""></a></li>
-            </ul>
+      <div class="" name="col1" style="" uk-grid>
+        <div class="uk-width-expand@m" name="col1-subdiv">
+          <div class="uk-padding-large uk-padding-remove-bottom" uk-slideshow uk-grid>
+            <div class="">
+              <ul class="uk-thumbnav uk-thumbnav-vertical" uk-margin>
+                <li uk-slideshow-item="0"><a href="#"><img src="./images/plu1.jpg" width="60" alt=""></a></li>
+                <li uk-slideshow-item="1"><a href="#"><img src="./images/plu2.jpg" width="60" alt=""></a></li>
+                <li uk-slideshow-item="2"><a href="#"><img src="./images/plu3.jpg" width="60" alt=""></a></li>
+                <li uk-slideshow-item="3"><a href="#"><img src="./images/youtube.jpg" width="60" alt=""></a></li>
+              </ul>
+            </div>
+            <div class="uk-position-relative uk-visible-toggle uk-dark uk-width-expand@m">
+              <ul class="uk-slideshow-items">
+                <li>
+                  <img src="./images/plu1.jpg" alt="" uk-cover>
+                </li>
+                <li>
+                  <img src="./images/plu2.jpg" alt="" uk-cover>
+                </li>
+                <li>
+                  <img src="./images/plu3.jpg" alt="" uk-cover>
+                </li>
+                <li>
+                  <iframe width="640" height="515" src="https://www.youtube.com/embed/TUUUh-51t1k?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </li>
+              </ul>
+              <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
+              <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+            </div>
           </div>
-          <div class="uk-position-relative uk-visible-toggle uk-dark uk-width-expand@m">
-            <ul class="uk-slideshow-items">
-              <li>
-                <img src="./images/plu1.jpg" alt="" uk-cover>
-              </li>
-              <li>
-                <img src="./images/plu2.jpg" alt="" uk-cover>
-              </li>
-              <li>
-                <img src="./images/plu3.jpg" alt="" uk-cover>
-              </li>
-              <li>
-                <iframe width="640" height="515" src="https://www.youtube.com/embed/TUUUh-51t1k?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              </li>
-            </ul>
-            <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
-            <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
-          </div>
+        </div>
+        <div style="uk-width-1-3@m uk-text-bottom " name="col1-subdiv2">
+          <!-- <div class="uk-padding-small"> -->
+          <div class="uk-padding-large uk-padding-remove-left uk-padding-remove-right">
+          <table class="uk-table uk-table-hover uk-table-divider uk-dark uk-margin-remove-bottom uk-text-left ">
+            <tbody>
+              <tr>
+                <td class="uk-text-left" style="color:#333333">Price: $</td>
+              </tr>
+              <tr>
+                <td class="uk-text-left" style="color:#333333">Supported Versions: </td>
+              </tr>
+              <tr>
+                <td class="uk-text-left"><a href="">Download</a></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
         </div>
 
-        <!-- <div class="uk-padding-small"> -->
-        <table class="uk-table uk-table-hover uk-table-divider uk-dark uk-margin-remove-bottom">
-          <tbody>
-            <tr>
-              <td style="color:#333333">Price: $</td>
-              <td style="color:#333333">Supported Versions: </td>
-            </tr>
-            <tr>
-              <td><a href="">Download</a></td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
+
         <!-- </div> -->
       </div>
       <div class="uk-padding-small">
