7/3/18 - Design changes wRp main and UP

--- a/unityplugins-site/index.html
+++ b/unityplugins-site/index.html
@@ -303,7 +303,7 @@
       <div class="" name="col1" style="" uk-grid>
         <div class="uk-width-expand@m" name="col1-subdiv">
           <div class="uk-padding-large uk-padding-remove-bottom" uk-slideshow uk-grid>
-            <div class="">
+            <div class="uk-height-max-large" style="overflow: auto; overflow-x: hidden;">
               <ul class="uk-thumbnav uk-thumbnav-vertical" uk-margin>
                 <li uk-slideshow-item="0"><a href="#"><img src="./images/plu1.jpg" width="60" alt=""></a></li>
                 <li uk-slideshow-item="1"><a href="#"><img src="./images/plu2.jpg" width="60" alt=""></a></li>
