--- a/unityplugins-site/index.html
+++ b/unityplugins-site/index.html
@@ -266,7 +266,7 @@
 
 
       $("body").on('DOMSubtreeModified', ".swiper-container", function() {
-        alert('dom change called');
+        console.log('dom change called');
           swiper.update();
       });
     });
